bug fixes in swagger.js
