# routes/signup.js
@@ -10,7 +10,7 @@ router.post(
       required: true,
       schema: {
         $email: 'example@example.com',
-        $name: 'Password_123456',
+        $password: 'Password_123456',
       }
     }
   */
